# routes/api_web.php
@@ -17,3 +17,8 @@ use Illuminate\Support\Facades\Route;
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
+Route::apiResource('subject', \App\Http\Controllers\API\V1\WEB\SubjectController::class)->only(['index','show']);
+Route::get('file-by-subject/{subject_id}', [\App\Http\Controllers\API\V1\WEB\FileController::class, 'index']);
+Route::get('file-by-keyword/{keyword}', [\App\Http\Controllers\API\V1\WEB\FileController::class, 'show']);
+Route::get('search/{text}', [\App\Http\Controllers\API\V1\WEB\FileController::class, 'search']);
+
